# dynax

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  README.rst  conftest.py  not-but.py  notes.md  paper.bib  paper.md  pyproject.toml  pytest.ini  pytreenotes.md  setup.py
.github/workflows/: draft-pdf.yml  run_tests.yml
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/source/: api.rst  bibliography.bib  conf.py  examples.rst  index.rst  quick-start.rst  references.rst  user-guide.rst
dynax/: __init__.py  ad.py  custom_types.py  derivative.py  estimation.py  evolution.py  example_aes.py  example_models.py  interpolation.py  linearize.py  models.py  prettymodule.py  structident.py  system.py  util.py
examples/: fit_initial_state.py  fit_linear_parameters.ipynb  fit_long_input.py  fit_multiple_shooting.py  fit_multiple_shooting_second_order_sys.py  fit_nonlinear_ode.ipynb  fit_ode.ipynb  fit_second_order_sys.py  linearize_discrete_time.py  linearize_loudspeaker.py  linearize_ode.py  linearize_recurrent_network.py  linearize_second_order_sys.py
experiments/: compare_optimzers.ipynb  fit.py  linearize.py  observability.py  temp.py
src/dynax/: __init__.py  ad.py  custom_types.py  estimation.py  linearize.py  models.py  system.py  util.py
tests/: benchmarks.py  conftest.py  test_ad.py  test_estimation.py  test_evolution.py  test_examples.py  test_fit.py  test_linearize.py  test_systems.py  test_util.py
