[project]
name = "dynax"
version = "0.0.2"
description = "Dynamical systems with JAX!"
readme = "README.md"
requires-python =">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Franz M. Heuchel", email = "franz.heuchel@pm.me"},
]
keywords = ["jax", "dynamical-systems", "system-identification", "linearization"]
urls = {repository = "https://github.com/fhchl/dynax"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "jax>=0.4.13,<=0.5",
    "diffrax>=0.4,<=0.5",
    "equinox>=0.10, <=0.10.10",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "matplotlib",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx_rtd_theme",
    "nbsphinx",
    "pre-commit",
]

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["E", "F", "I001", "B"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
fixable = ["I001", "F401"]
line-length = 88
src = ["dynax", "tests", "examples"]

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false
known-first-party = ["dynax"]

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2
order_by_type = false
known_first_party = ["dynax"]