[project]
name = "dynax"
version = "0.0.2"
description = "Dynamical systems with JAX!"
readme = "README.md"
requires-python =">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Franz M. Heuchel", email = "franz.heuchel@pm.me"}]
keywords = ["jax", "dynamical-systems", "system-identification", "linearization"]
urls = {repository = "https://github.com/fhchl/dynax"}
dependencies = ["jax>=0.4.23", "diffrax>=0.5"]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
    "sphinx",
    "sphinx-autobuild",
    "sphinx_autodoc_typehints",
    "furo",
    "sphinxcontrib-bibtex",
    "nbsphinx",
    "pre-commit",
]

[tool.pytest.ini_options]
addopts = [
    "--pdbcls=IPython.terminal.debugger:Pdb",
    # "--jaxtyping-packages=dynax,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["E", "F", "I001", "B"]
ignore = [
    "E402", # Module level import not at top of file
    "E721", # Do not compare types, use 'isinstance()'
    "E731", # Do not assign a lambda expression, use a def (E731)
    "E741", # Do not use variables named 'I', 'O', or 'l'
]
ignore-init-module-imports = true
fixable = ["I001", "F401"]
line-length = 88
src = ["dynax", "tests", "examples"]
force-exclude = true
extend-include = ["*.ipynb"]

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false
known-first-party = ["dynax"]
