[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "dynax[dev, docs]"
]

[project]
authors = [{email = "franz.heuchel@pm.me", name = "Franz M. Heuchel"}]
dependencies = ["jax<=0.4.33", "diffrax<=0.6", "jaxtyping>=0.2.20"]
description = "Dynamical systems with JAX!"
keywords = [
  "jax",
  "dynamical-systems",
  "system-identification",
  "linearization"
]
license = {file = "LICENSE"}
name = "dynax"
readme = "README.rst"
requires-python = ">=3.10"
urls = {repository = "https://github.com/fhchl/dynax"}
version = "0.1.1"

[project.optional-dependencies]
dev = ["pytest", "jupyter", "matplotlib", "pre-commit", "ruff", "toml-sort", "pyright"]
docs = [
  "nbsphinx",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme",
  "sphinx",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-aafig",
  "furo"
]

[tool.pyright]
ignore = ["tests"]
include = ["dynax", "examples"]
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = false
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
addopts = [
  "--pdbcls=IPython.terminal.debugger:Pdb"
]

[tool.ruff]
extend-include = ["*.ipynb"]
force-exclude = true
line-length = 88
src = ["dynax", "tests", "examples"]

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = [
  "E402", # Module level import not at top of file
  "E721", # Do not compare types, use 'isinstance()'
  "E731", # Do not assign a lambda expression, use a def (E731)
  "E741" # Do not use variables named 'I', 'O', or 'l'
]
select = ["E", "F", "I001", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["dynax"]
lines-after-imports = 2
order-by-type = false

[tool.uv.sources]
dynax = {workspace = true}
